--- a/views/index.haml
+++ b/views/index.haml
@@ -3,10 +3,73 @@
 
 %h1 So Play We All
 
-Introduction
+#introduction
+  %a{ :name => 'introduction' }
+  %h2 Introduction
 
-Rules
+  %p
+    :markdown
+      [Peter Harkins](http://push.cx), [Jim C. Gadrow](http://www.jgadrow.com),
+      and [Luke Hutscal](http://www.creaturecreative.com) are each building an
+      online game as part of a contest between us. Every week we'll pick a new
+      area of our games to code on and budget how many hours to spend on it.
+      Every week, someone will be judged to have done the best. Anyone who
+      doesn't put in the time pays the price by funding the others' games.
+      Anyone who quits has to delete their entire codebase and all backups.
 
-Contestants
+#rules
+  %a{ :name => 'rules' }
+  %h2 Rules
 
-Table of links
+  :markdown
+    1.  &#8220;[Fuck it, we'll do it
+        live](http://youtu.be/2tJjNVVwRCY?t=1m)&#8221; Games are live as
+        currently developed, even if they suck, starting from &#8220;but it's
+        just a login screen&#8221;. Develop on master, develop on prod box if
+        you have to, but don't hold any code back.
+    1.  Each week we'll collectively choose how many hours to spend on our
+        games and a non-mandatory topic. Anyone who doesn't spend the time (or
+        cheats and spends more) funds the other games by giving a $20 gift card
+        to each other player for game-related expenses (eg. ThemeForest,
+        Linode, AdWords). If you finish early, you rock. Boast a little bit and
+        make the others bow to your awesomeness. (Exception for suiting up: if
+        you have to wear a suit to a funeral, a close family wedding, or a
+        court date, you are allowed to miss that week. No other exceptions, not
+        even dismemberment.)
+    1.  If you had to pay the time budget penalty for not making your hours,
+        you can &#8220;bank&#8221; unused time and use it in future weeks as
+        your availability allows.
+    1.  Deadline is Wednesday at noon GMT to deploy code and publish a blog
+        post, schedule it to make it happen.
+    1.  A [BBGameZone forum](http://www.bbgamezone.net) poll judges who won
+        that week, 24h window. Penalty is $10 in funding to each player for a
+        late post.
+    1.  By Saturday noon GMT, write a blog post to respond to others' updates,
+        talk smack, enjoy victory, critique game design, suggest improvements,
+        etc.
+    1.  Not just OK but encourage to find or buy assets: art, themes,
+        libraries, modules. You can reuse your own pet library as long as it
+        has been released publicly before that week, but outsourcing code is
+        forbidden. Penalty for outsourcing code is $20 + as much was spent on
+        outsourcing to each player.
+    1.  Whoever reaches $10k in profit first wins the contest. But whoever
+        turns their game into a full-time job wins all the bragging rights.
+    1.  Rules can change by unanimous acclaim.
+
+%p
+  So say we all. So play we all.
+
+#contestants
+  %a{ :name => 'contestants' }
+  %h2 Contestants
+
+  :markdown
+    ### Jim C. Gadrow: [Allabrilyn](http://www.allabrilyn.com)
+    ### Luke Hutscal: [Fantasy Adventure](http://www.fantasyadventuregame.com)
+    ### Peter Harkins: [Oaqn](http://www.oaqn.com)
+
+#progress
+  %a{ :name => 'progress' }
+  %h2 Progress
+
+
