--- a/views/stylesheets/style.sass
+++ b/views/stylesheets/style.sass
@@ -6,9 +6,15 @@ body
   font-family: Helvetica, Arial, sans-serif
   font-size: 12px
   margin: 25px
-  text-align: center
 
 #page
   margin: 0 auto
   text-align: left
   width: 350px
+
+tr.week
+  vertical-align: top
+  margin-top: 10px
+
+td.winner
+  background-color: #ffccff
