--- a/views/stylesheets/style.sass
+++ b/views/stylesheets/style.sass
@@ -3,18 +3,67 @@
   padding: 0
 
 body
+  color: #a87a2c
   font-family: Helvetica, Arial, sans-serif
   font-size: 12px
-  margin: 25px
+  line-height: 18px
+
+h1
+  color: #606f04
+  font-size: 36px
+  margin: 40px auto
+  text-align: center
+
+h2
+  color: #b0bf77
+  margin: 35px 0 20px 0
+
+li
+  margin-top: 1em
+
+th
+  color: #dbb34f
+  font-weight: normal
+  text-align: left
 
 #page
   margin: 0 auto
-  text-align: left
-  width: 350px
+  width: 600px
+
+table.competitors
+  width: 100%
+
+table.progress
+  border-spacing: 0 4px
+  margin: 0 0 30px -150px
+  width: 900px
+
+th.balance, td.balance
+  text-align: right
+
+tr.weekdivider
+  height: 2px
+  background-color: #dbb34f
 
 tr.week
   vertical-align: top
-  margin-top: 10px
+
+td.label
+  font-size: 8px
+
+th.update, td.update, th.response, td.response
+  padding-left: 8px
+
+th.week, th.hours, th.votes
+  text-align: center
+
+td.week, td.hours, td.votes
+  font-size: 14px
+  text-align: center
 
 td.winner
-  background-color: #ffccff
+  background-color: #ccffcc
+  border-radius: 10px
+  -moz-border-radius: 10px
+  margin-right: 10px
+  width: 20px
