--- a/views/stylesheets/style.sass
+++ b/views/stylesheets/style.sass
@@ -38,32 +38,35 @@ table.progress
   margin: 0 0 30px -150px
   width: 900px
 
-th.balance, td.balance
-  text-align: right
+  th.balance, td.balance
+    text-align: right
 
-tr.weekdivider
-  height: 2px
-  background-color: #dbb34f
+  tr.weekdivider
+    height: 2px
+    background-color: #dbb34f
 
-tr.week
-  vertical-align: top
+  tr.week
+    vertical-align: top
 
-td.label
-  font-size: 8px
+  td.update:hover, td.response:hover
+    background-color: #f2e883
 
-th.update, td.update, th.response, td.response
-  padding-left: 8px
+  td.label
+    font-size: 8px
 
-th.week, th.hours, th.votes
-  text-align: center
+  th.update, td.update, th.response, td.response
+    padding-left: 8px
 
-td.week, td.hours, td.votes
-  font-size: 14px
-  text-align: center
+  th.week, th.hours, th.votes
+    text-align: center
 
-td.winner
-  background-color: #ccffcc
-  border-radius: 10px
-  -moz-border-radius: 10px
-  margin-right: 10px
-  width: 20px
+  td.week, td.hours, td.votes
+    font-size: 14px
+    text-align: center
+
+  td.winner
+    background-color: #ccffcc
+    border-radius: 10px
+    -moz-border-radius: 10px
+    margin-right: 10px
+    width: 20px
