--- a/views/stylesheets/style.sass
+++ b/views/stylesheets/style.sass
@@ -48,7 +48,7 @@ table.progress
   tr.week
     vertical-align: top
 
-  td.update:hover, td.response:hover
+  tr.game:hover
     background-color: #f2e883
 
   td.label
