Fixed Luke's website link

--- a/views/index.haml
+++ b/views/index.haml
@@ -11,7 +11,7 @@
   %p
     :markdown
       [Peter Harkins](http://push.cx), [Jim C. Gadrow](http://www.jgadrow.com),
-      and [Luke Hutscal](http://www.creaturecreative.com) are each building an
+      and [Luke Hutscal](http://girasquid.com) are each building an
       online game as part of a contest between us. Every week we'll pick a new
       area of our games to code on and budget how many hours to spend on it.
       Every week, someone will be judged to have done the best. Anyone who
