--- a/views/index.haml
+++ b/views/index.haml
@@ -107,6 +107,7 @@
     - abbreviations = { :allabrilyn => 'Ab', :fantasyadventure => 'FA', :oaqn => 'o' }
     - YAML::load_file('progress.yaml').each do |week|
       - winner = week[:votes].sort { |a, b| a[1] <=> b[1] }.last.first
+      - winner = nil if week[:votes][winner].nil? or week[:votes][winner] == 0
       %tr.weekdivider
         %td{ :colspan => 7 }
       %tr.week
