Fixed another luke link

--- a/views/index.haml
+++ b/views/index.haml
@@ -80,7 +80,7 @@
       %tr
         %td <a href="http://www.fantasyadventuregame.com">Fantasy Adventure</a>
         %td (<a href="http://blog.fantasyadventuregame.com">blog</a>)
-        %td <a href="http://www.creaturecreative.com">Luke Hutscal</a>
+        %td <a href="http://girasquid.com">Luke Hutscal</a>
         %td.balance $2.01
       %tr
         %td <a href="http://www.oaqn.com">Oaqn</a>
