--- a/views/index.haml
+++ b/views/index.haml
@@ -76,7 +76,7 @@
         %td <a href="http://allabrilyn.com">Allabrilyn</a>
         %td (<a href="http://blog.allabrilyn.com">blog</a>)
         %td <a href="http://www.jgadrow.com">Jim C. Gadrow</a>
-        %td.balance
+        %td.balance $19.75
       %tr
         %td <a href="http://www.fantasyadventuregame.com">Fantasy Adventure</a>
         %td (<a href="http://blog.fantasyadventuregame.com">blog</a>)
