--- a/views/index.haml
+++ b/views/index.haml
@@ -8,15 +8,18 @@
   %a{ :name => 'introduction' }
   %h2 Introduction
 
-  %p
-    :markdown
-      [Peter Harkins](http://push.cx), [Jim C. Gadrow](http://www.jgadrow.com),
-      and [Luke Hutscal](http://girasquid.com) are each building an
-      online game as part of a contest between us. Every week we'll pick a new
-      area of our games to code on and budget how many hours to spend on it.
-      Every week, someone will be judged to have done the best. Anyone who
-      doesn't put in the time pays the price by funding the others' games.
-      Anyone who quits has to delete their entire codebase and all backups.
+  :markdown
+    [Peter Harkins](http://push.cx), [Jim C. Gadrow](http://www.jgadrow.com),
+    and [Luke Hutscal](http://girasquid.com) are each building an
+    online game as part of a contest between us. Every week we'll pick a new
+    area of our games to code on and budget how many hours to spend on it.
+    Every week, someone will be judged to have done the best. Anyone who
+    doesn't put in the time pays the price by funding the others' games.
+    Anyone who quits has to delete their entire codebase and all backups.
+
+    The contest is not open to join, but we encourage anyone who likes the idea
+    to take a copy of rules, find some friends, and build games. And please,
+    tell us about it so we can link to you here.
 
 #rules
   %a{ :name => 'rules' }
