Fixed www link to FA (hat-tip marekweb)

--- a/views/index.haml
+++ b/views/index.haml
@@ -83,7 +83,7 @@
         %td <a href="http://www.jgadrow.com">Jim C. Gadrow</a>
         %td.balance $19.75
       %tr
-        %td <a href="http://www.fantasyadventuregame.com">Fantasy Adventure</a>
+        %td <a href="http://fantasyadventuregame.com">Fantasy Adventure</a>
         %td (<a href="http://blog.fantasyadventuregame.com">blog</a>)
         %td <a href="http://girasquid.com">Luke Hutscal</a>
         %td.balance -$22.16
