Week 5: all ledgers

--- a/views/index.haml
+++ b/views/index.haml
@@ -91,7 +91,7 @@
         %td <a href="http://www.oaqn.com">Oaqn</a>
         %td (<a href="http://blog.oaqn.com">blog</a>)
         %td <a href="http://push.cx">Peter Harkins</a>
-        %td.balance $2.01
+        %td.balance -$78.35
 
 #progress
   %a{ :name => 'progress' }
