simplified winner tracking

--- a/views/index.haml
+++ b/views/index.haml
@@ -112,8 +112,7 @@
     - abbreviations = { :allabrilyn => 'Ab', :fantasyadventure => 'FA', :oaqn => 'o' }
     - YAML::load_file('progress.yaml').each do |week|
       - winning_vote_count = week[:votes].sort { |a, b| a[1] <=> b[1] }.last.last
-      - winner = week[:votes].sort { |a, b| a[1] <=> b[1] }.last.first
-      - winner = nil if week[:votes][winner].nil? or week[:votes][winner] == 0
+      - winning_vote_count = -1 if 0 == winning_vote_count # sentinel value for 'no winner'
       %tr.weekdivider
         %td{ :colspan => 7 }
       %tr.week
@@ -126,7 +125,7 @@
           %td.label= abbreviations[game]
           %td.update
             %a{ :href => week[game][:update_url] }= week[game][:update]
-          %td.votes{ :class => !winner.nil? && week[:votes][game] == winning_vote_count ? 'winner' : '' }= week[:votes][game]
+          %td.votes{ :class => week[:votes][game] == winning_vote_count ? 'winner' : '' }= week[:votes][game]
           %td.response
             %a{:href => week[game][:response_url] }= week[game][:response]
 
