--- a/views/index.haml
+++ b/views/index.haml
@@ -34,14 +34,15 @@
         just a login screen&#8221;. Develop on master, develop on prod box if
         you have to, but don't hold any code back.
     1.  Each week we'll collectively choose how many hours to spend on our
-        games and a non-mandatory topic. Anyone who doesn't spend the time (or
-        cheats and spends more) funds the other games by giving a $20 gift card
-        to each other player for game-related expenses (eg. ThemeForest,
-        Linode, AdWords). If you finish early, you rock. Boast a little bit and
-        make the others bow to your awesomeness. (Exception for suiting up: if
-        you have to wear a suit to a funeral, a close family wedding, or a
-        court date, you are allowed to miss that week. No other exceptions, not
-        even dismemberment.)
+        games and a non-mandatory topic. Anyone who doesn't spend the time
+        funds the other games by giving a $20 gift card to each other player
+        for game-related expenses (eg. ThemeForest, Linode, AdWords). If you
+        finish early, you rock. Boast a little bit and make the others bow to
+        your awesomeness. (Exception for suiting up: if you have to wear a suit
+        to a funeral, a close family wedding, or a court date, you are allowed
+        to miss that week. No other exceptions, not even dismemberment.)
+    1.  You have to spend at least that minimum amount of time and can spend up
+        to 3x as much.
     1.  If you had to pay the time budget penalty for not making your hours,
         you can &#8220;bank&#8221; unused time and use it in future weeks as
         your availability allows.
